# proposal-review-assistant

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  how-to-proposal.md  how-to-scientific-writing.md  llm.txt  project.code-workspace  pyproject.toml  requirements.txt  review_proposal.py  review_results.md
.github/workflows/: build-and-push-docker.yml  deploy.yml
app/: main.py  pdf_converter.py  settings.py
app/models/: __init__.py  azure_openai.py  fake.py  ollama.py  openai.py
app/prompts/: abstract.py  bibliography.py  figures_diagrams.py  general_writing.py  introduction.py  motivation.py  objectives.py  problem.py  schedule.py  transparency.py  utils.py
docker/: compose.app.yaml  compose.proxy.yaml
prompts/: __init__.py  abstract.py  bibliography.py  diagrams_figures.py  general_writing.py  introduction.py  motivation.py  objectives.py  playground.ipynb  problem.py  schedule.py  transparency.py
proposal_reviewer/: __init__.py  simple_reviewer.py
