[tool.poetry]
name = "proposal-reviewer"
version = "0.1.0"
description = "A tool for reviewing thesis proposals"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "proposal_reviewer"}]

[tool.poetry.dependencies]
python = "^3.9"
pypdf = "^3.15.1"
openai = "^1.1.1"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[tool.poetry.scripts]
proposal-review = "proposal_reviewer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
